fixed media query, font and overlap

--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -2,7 +2,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a & */
-@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Rock+Salt&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&family=Shantell+Sans:wght@400;700&display=swap');
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #0E445A   ;
@@ -12,7 +12,7 @@ Fonts are separated by a & */
   
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Rock Salt";
+  --heading-font: "Shantell Sans";
   --paragraph-font: Barlow, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
