--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Rock+Salt&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&family=Shantell+Sans:wght@400;700&display=swap');
 
 body {
     background-color: #0A9396;
-    font-family: 'Rock Salt', 'Brush Script MT', cursive;
+    font-family: 'Shantell Sans', 'Brush Script MT', cursive;
     font-size: 22px;
     padding: 0;
     margin: 0;
@@ -11,8 +11,9 @@ body {
 header {
     display: grid;
     grid-template-columns: 150px auto;
-    background-color: rgb(202, 103, 2);
+    background-color: rgba(202, 103, 2, .7);
     /* background-color:rgba(20,30,13, .7); */
+    position: relative;
 }
 
 nav {
@@ -31,7 +32,7 @@ footer {
 }
 
 h2 {
-    font-family: 'Rock Salt', 'Brush Script MT', cursive;
+    font-family: 'Shantell Sans', 'Brush Script MT', cursive;
     color: #0E445A;
     margin: 0;
 }
@@ -74,6 +75,7 @@ nav a:hover {
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
     
 }
 
@@ -124,14 +126,15 @@ main section {
 
 .home-title {
     color: white;
-    font-family: 'Rock Salt', 'Brush Script MT', cursive;
+    font-family: 'Shantell Sans', 'Brush Script MT', cursive;
     font-size: 2em;
     margin-top: 10px;
 }
 
 h4 {
-    color: #0E445A;
-    font-family: 'Rock Salt', 'Brush Script MT', cursive;
+    color: white;
+    font-family: 'Shantell Sans', 'Brush Script MT', cursive;
+    font-size: 1.5em;
 }
 
 
@@ -139,7 +142,7 @@ h4 {
     background-color: #CA6702;
     color: white;
     text-decoration: none;
-    font-family: 'Rock Salt', 'Brush Script MT', cursive;
+    font-family: 'Shantell Sans', 'Brush Script MT', cursive;
     font-size: 18px;
     padding: 15px 30px;
     margin-top: 50px;
@@ -163,7 +166,7 @@ h4 {
 
 .msg h2 {
     color: #CA6702;
-    font-family: 'Rock Salt', 'Brush Script MT', cursive;
+    font-family: 'Shantell Sans', 'Brush Script MT', cursive;
 }
 
 .msg p {
@@ -233,7 +236,7 @@ main section img {
     box-sizing: border-box;
 }
 
-main.home-grid {
+.home-grid {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
 }
